# tiny-baby-snake

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  audio.py  config.py  food.py  game.py  input_handler.py  main.py  paths.py  pyproject.toml  renderer.py  requirements-dev.txt  requirements.txt  snake.py  storage.py  tiny-baby-snake.spec
.github/workflows/: ci.yml
engine/: __init__.py  achievements.py  game.py  levels.py  modes.py  powerups.py  profile.py  snake.py
fx/: __init__.py  camera.py  draw.py  particles.py  theme.py
scenes/: __init__.py
tests/: conftest.py  test_audio.py  test_effects.py  test_food.py  test_game.py  test_levels.py  test_menu.py  test_modes.py  test_powerups.py  test_profile.py  test_snake.py  test_storage.py
tools/: gen_media.py  gen_sounds.py
